client side auth with jwt
